Fixed font on mobile view

--- a/styles/about.css
+++ b/styles/about.css
@@ -137,13 +137,13 @@ body{
     background: #0004;
 }
 .container h1{
+    font-size: 4vw;
     margin-bottom: 30px;
     color: #e4e4e4;
-    font-size: 50px;
     font-weight: 900;
 }
 .text{
-    font-size: 20px;
+    font-size: 2vw;
     color: #e4e4e4;
     line-height: 30px;
     text-align: justify;
@@ -154,7 +154,7 @@ body{
     color: #e4e4e4;
     justify-content: space-between;
     font-weight: 700;
-    font-size: 20px;
+    font-size: 2vw;
 }
 @media screen and (max-width:1200px) {
     .container{
@@ -177,5 +177,11 @@ body{
     }
     .container{
         padding: 60px;
+    }
+    .container h1{
+        font-size: 10vw;
+    }
+    .skills,.text{
+        font-size: 5vw;
     }
 }
