--- a/styles/contact.css
+++ b/styles/contact.css
@@ -123,7 +123,7 @@ body{
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    background: url(/images/contact_bg.png);
+    background: url(../images/contact_bg.png);
     background-repeat: no-repeat;
     background-size: cover;
 }
@@ -158,7 +158,7 @@ body{
     min-width: 60px;
     height: 60px;
     display: flex;
-    background: url(/images/location.png);
+    background: url(../images/location.png);
     background-size: contain;
     align-items: center;
     border-radius: 50%;
@@ -168,7 +168,7 @@ body{
     min-width: 60px;
     height: 60px;
     display: flex;
-    background: url(/images/email.png);
+    background: url(../images/email.png);
     background-size: contain;
     align-items: center;
     border-radius: 50%;
@@ -178,7 +178,7 @@ body{
     min-width: 60px;
     height: 60px;
     display: flex;
-    background: url(/images/phone.png);
+    background: url(../images/phone.png);
     background-size: contain;
     align-items: center;
     border-radius: 50%;
@@ -268,6 +268,9 @@ body{
 
 }
 @media (max-width:500px){
+    .content h2{
+        font-size: 40px;
+    }
     .contact-info .box .text{
         font-size: 15px;
     }
